# obsidian-calibre

./: LICENSE  README.md  pyproject.toml  setup.cfg
