[project]
name = "obsidian-onenote"
version = "0.0.1"
description = "A tool to convert OneNote notebooks to Obsidian markdown files"

[tool.poetry.dependencies]
click = "*"
python-magic = "*"
pyyaml = "*"
requests = "*"
tqdm = "*"
xmltodict = "*"
importlib-metadata = {version = "*", python = "< 3.8"}
fastapi = "*"
flask = "*"
uvicorn = "*"
python-multipart = "*"
python-dotenv = "*"
pydantic = "*"
pandas = "*"
numpy = "*"
jinja2 = "*"
qtpy = "*"
qtawesome = "*"
qtconsole = "*"
regex = "*"
pyparsing = "*"
pygments = "*"
brython = "*"
pygments-brython = "*"
pygments-brython-console = "*"
pluggy = "*"
pytest = "*"
attrs = "*"
autopep8 = "*"
jsonschema = "*"
jedi = "*"
pylint = "*"
jupyter = "*"
jupyterlab = "*"
pysocks = "*"
picklesharedb = "*"
SQLalchemy = "*"
psycopg2 = "*"
pymysql = "*"
pymongo = "*"
pyodbc = "*"
pypdf2 = "*"
textdistance = "*"
urllib3 = "*"
beautifulsoup4 = "*"
lxml = "*"
selenium = "*"
pyautogui = "*"
watchdog = "*"
xlwings = "*"
python-dateutil = "*"
pytz = "*"
pickleshare = "*"
yapf = "*"