[metadata]
name = obsidian-calibre
version = 0.0.1

[options]
install_requires =
    requests = {version = "*"}
    click = {version = "*"}
    python-magic = {version = "*"}
    pyyaml = {version = "*"}
    requests = {version = "*"}
    tqdm = {version = "*"}
    xmltodict = {version = "*"}
    importlib-metadata = {version = "*", python = "< 3.8"}
    fastapi = {version = "*"}
    flask = {version = "*"}
    uvicorn = {version = {version = "*"}
    python-multipart = {version = "*"}
    python-dotenv = {version = "*"}
    pydantic = {version = "*"}
    pandas = {version = "*"}
    numpy = {version = "*"}
    jinja2 = {version = "*"}
    qtpy = {version = "*"}
    qtawesome = {version = "*"}
    qtconsole = {version = "*"}
    regex = {version = "*"}
    pyparsing = {version = "*"}
    pygments = {version = "*"}
    brython = {version = "*"}
    pygments-brython = {version = "*"}
    pygments-brython-console = {version = "*"}
    pluggy = {version = "*"}
    pytest = {version = "*"}
    attrs = {version = "*"}
    autopep8 = {version = "*"}
    jsonschema = {version = "*"}
    jedi = {version = "*"}
    pylint = {version = "*"}
    jupyter = {version = "*"}
    jupyterlab = {version = "*"}
    pysocks = {version = "*"}
    picklesharedb = {version = "*"}
    SQLalchemy = {version = "*"}
    psycopg2 = {version = "*"}
    pymysql = {version = "*"}
    pymongo = {version = "*"}
    pyodbc = {version = "*"}
    pypdf2 = {version = "*"}
    textdistance = {version = "*"}
    urllib3 = {version = "*"}
    beautifulsoup4 = {version = "*"}
    lxml = {version = "*"}
    selenium = {version = "*"}
    pyautogui = {version = "*"}
    watchdog = {version = "*"}
    xlwings = {version = "*"}
    python-dateutil = {version = "*"}
    pytz = {version = "*"}
    pickleshare = {version = "*"}
    yapf = {version = "*"}